--- a/_posts/2018-9-10-MongoDB Atlas and R.html
+++ b/_posts/2018-9-10-MongoDB Atlas and R.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+---
+title: Mongo DB Atlas and R
+layout: post
+comments: True
+---
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 
